수동구매 UI구현

--- a/src/main/resources/templates/view/lotto_buy.html
+++ b/src/main/resources/templates/view/lotto_buy.html
@@ -50,8 +50,8 @@
 
         <main role="main" class="inner cover">
             <form action="/purchase" class="was-validated ">
-                <h4 id="error">{{error}}</h4>
-                <h4 class="cover-heading">1000원 단위로 금액을 입력해 주세요!</h4>
+                <h4>{{error_price}}</h4>
+                <h4 class="cover-heading">금액을 입력해 주세요!</h4>
                 <div class="form-group">
                     <input class="form-control" type="text" id="price" placeholder="금액 입력" name="price" required>
                 </div>
