[Feature] 에러 처리 페이지 + 리팩토링

--- a/src/main/resources/templates/lotto_shopping.html
+++ b/src/main/resources/templates/lotto_shopping.html
@@ -13,18 +13,6 @@
       <title>lotto game</title>
 </head>
 
-
-<style>
-      div.lottobuy input {
-            max-width: 100px;
-      }
-
-      #bonus {
-            max-width: 20px;
-      }
-</style>
-<!-- #users 리스트 -->
-
 <body>
       <nav>
             <h3>로또 구입</h3>
@@ -36,7 +24,10 @@
                   <!-- <input type="text" name="lotto" placeholder="1,2,3,4,5,6" maxlength="20" /> -->
                   <br>
                   <textarea name="numbers" rows="5" cols="20"></textarea>
-                  <label><strong>ex) 1,2,3,4,5,6 으로 입력해주세요</strong></label>
+                  <br>
+                  <label><strong>ex) 1,2,3,4,5,6 와 같은 형식으로 입력해주세요</strong></label>
+                  <br>
+                  <label><strong>6자리를 입력했을 경우 엔터로 구분해주세요</strong></label>
                   <br />
                   <br />
                   <p><i>충전한 돈만큼만 구매할 수 있어요</i></p>
