[MOD] 에러 핸들링 수정

--- a/src/main/resources/templates/error_message.html
+++ b/src/main/resources/templates/error_message.html
@@ -13,7 +13,7 @@
     <title>lotto game</title>
 </head>
 
-{{message}}
+<!-- {{message}} -->
 <br>
 <form action="/" method="GET">
     <input type="submit" id="to-home" value="메인 화면으로 돌아가기"></button>
