--- a/src/main/resources/templates/lookupPage.html
+++ b/src/main/resources/templates/lookupPage.html
@@ -39,7 +39,7 @@
 
 <body>
     <h1>로또</h1>
-    <a href="/buyLotto">로또 구매</a> <a href="/lookupLotto">회차 조회</a>
+    <a href="/buyLotto" class="btn btn-primary">로또 구매</a> <a href="/lookupLotto" class="btn btn-primary">회차 조회</a>
 
     <div id="nextTimes"></div>
     
